--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@
       </div>
 
       <!-- Middle Section / Product Cart -->
-      <div id="cart-container" class="grid grid-cols-1 md:grid-cols-3 justify-center items-center gap-9">
-        
-      </div>
+      <div
+        id="cart-container"
+        class="grid grid-cols-1 md:grid-cols-3 justify-center items-center gap-9"
+      ></div>
 
       <!-- Right Sidebar / History -->
       <div class="bg-yellow-100 md:w-1/6 w-full p-4 ml-9">
