button active and cart managment compleat

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <!-- Middle Section / Product Cart -->
       <div
         id="cart-container"
-        class="grid grid-cols-1 md:grid-cols-3 justify-center items-center gap-9"
+        class="grid grid-cols-1 md:grid-cols-3 justify-items-center gap-9"
       ></div>
 
       <!-- Right Sidebar / History -->
