--- a/index.html
+++ b/index.html
@@ -124,6 +124,24 @@
       </div>
     </section>
 
+    <!-- Open the modal using ID.showModal() method -->
+    <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+    <dialog id="info_modal" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+       
+
+        <div id="info-container">
+          
+        </div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
+
     <script src="index.js"></script>
   </body>
 </html>
