--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       Choose Your Trees
     </h1>
 
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+      <span class="loading loading-dots loading-xl"></span>
+    </section>
+
     <section class="flex flex-col md:flex-row min-h-screen mx-10">
       <!-- Left Sidebar / Menu -->
       <div class="md:w-1/6 w-full p-4 flex flex-col">
@@ -119,28 +123,34 @@
       ></div>
 
       <!-- Right Sidebar / History -->
-      <div class="bg-yellow-100 md:w-1/6 w-full p-4 ml-9">
-        <h2 class="text-xl font-bold mb-3">History</h2>
+      <div
+        class="w-full md:w-1/6 p-4 shadow-lg rounded-lg bg-white h-auto md:h-[100vh] mx-auto md:mx-0 md:ml-9"
+      >
+        <h2 class="text-xl font-bold mb-3 text-center md:text-left">
+          Your Cart
+        </h2>
+        <div id="your-cart-items" class="space-y-3"></div>
+        <div class="mt-4 font-bold text-lg text-center md:text-left">
+          Total: ৳<span id="cartTotal">0</span>
+        </div>
       </div>
     </section>
 
-    <!-- Open the modal using ID.showModal() method -->
-    <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
-    <dialog id="info_modal" class="modal modal-bottom sm:modal-middle">
-      <div class="modal-box">
-       
-
-        <div id="info-container">
-          
+    <section>
+      <!-- Open the modal using ID.showModal() method -->
+      <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+      <dialog id="info_modal" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+          <div id="info-container" class=""></div>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </form>
+          </div>
         </div>
-        <div class="modal-action">
-          <form method="dialog">
-            <!-- if there is a button in form, it will close the modal -->
-            <button class="btn">Close</button>
-          </form>
-        </div>
-      </div>
-    </dialog>
+      </dialog>
+    </section>
 
     <script src="index.js"></script>
   </body>
