--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <!-- Right Sidebar / History -->
       <div
-        class="w-full md:w-1/6 p-4 shadow-lg rounded-lg bg-white h-auto md:h-[100vh] mx-auto md:mx-0 md:ml-9"
+        class="w-full md:w-1/6 p-4 shadow-lg rounded-lg mt-10 md:mt-0 bg-white h-auto md:h-[100vh] mx-auto md:mx-0 md:ml-9"
       >
         <h2 class="text-xl font-bold mb-3 text-center md:text-left">
           Your Cart
@@ -150,6 +150,31 @@
           </div>
         </div>
       </dialog>
+    </section>
+
+    <section class="mt-25">
+      <h2 class="text-3xl font-bold text-center">About the Campaign</h2>
+
+      <div class="flex flex-col md:flex-row justify-between items-center mt-10 mx-0-auto md:px-85 justify-items-center">
+        <div class="w-full md:h-[530px] md:w-[530px] flex justify-items-center px-4">
+          <img src="./assets/about.png" alt="" />
+        </div>
+        <div class="md:w-[530px] md:mr-10 mt-4 px-3">
+          <p class="md:text-justify text-center">
+            Green Earth is a global tree plantation initiative dedicated to
+            fighting climate change. Since our start, we’ve planted over 500,000
+            trees worldwide. By joining our campaign, you help restore forests,
+            create habitats for wildlife, and combat global warming.
+          </p>
+
+          <ul class="mt-4 md:mt-6 text-center md:text-justify">
+            <li>Restoration of natural habitats</li>
+            <li>Improvement of air quality</li>
+            <li>Support for local communities</li>
+          </ul>
+
+        </div>
+      </div>
     </section>
 
     <script src="index.js"></script>
